# ai-toolbox

./: .env.example  .gitignore  README.md  append_role_bot.py  discord_bot_config.json  pyproject.toml  test_channel_select.py  test_parse.py  test_quick.py
config/: multi_bot.yaml
config/organizations/: corporate_board.yaml
docs/: ARCHITECTURE.md  ARCHIVE_2026-03-04.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  IMPLEMENTATION_COMPLETE.md  PHILOSOPHY.md  README.md  SOLUTION_AT_MENTION.md  SOLUTION_AT_MENTION_V2.md  TESTING_GUIDE.md  TEST_CASES.md  api.md  architecture.md  capability_analysis.md  cli.md  discord_bot.md  discord_bot_tools_proposal.md  multi_bot_final_design.md  multi_bot_redesign_v2.md  multi_bot_v2_1_detailed.md  multi_bot_v2_2_simplified.md  multi_bot_v2_3_cross_channel.md  multi_bot_v2_4_hub_bus.md  providers.md  research_report.md
docs/archive/: 2026-03-04.md  2026-03-05.md  README.md  implementation_plan_v2_adjusted.md
docs/development/: README.md  autonomous_architecture_design.md  context_graph_design.md  fix_conversation_and_channel.md  phase2_architecture_awareness.md
docs/multi-bot/: ARCHITECTURE.md  README.md  debug.md  research.md
docs/research/: agent_memory_research.md
docs/solutions/: README.md
examples/: 01_basic_agent.py  02_multi_tools_agent.py  03_custom_tools.py  04_vision_analysis.py  README.md
logs/: test_report_2026-03-05.md  test_report_live_2026-03-05.md
prompts/: README.md  SYSTEM_PROMPT.md
prompts/rules/: _meta.md  (+3 more)
scripts/: cyber-dynasty.service  multi_bot.sh  test_all.py  verify_structure.py
tests/: __init__.py
(+94 files in other folders)
